@@ -626,7 +626,7 @@ string CartDebug::loadSymbolFile(string file)
   {
     ifstream in(node.getPath().c_str());
     if(!in.is_open())
-      return DebuggerParser::red("symbol file '" + node.getRelativePath() + "' not found");
+      return DebuggerParser::red("symbol file '" + node.getPath(false) + "' not found");
 
     myUserAddresses.clear();
     myUserLabels.clear();
@@ -645,9 +645,9 @@ string CartDebug::loadSymbolFile(string file)
         addLabel(label, value);
     }
     in.close();
-    return "loaded " + node.getRelativePath() + " OK";
+    return "loaded " + node.getPath(false) + " OK";
   }
-  return DebuggerParser::red("symbol file '" + node.getRelativePath() + "' not found");
+  return DebuggerParser::red("symbol file '" + node.getPath(false) + "' not found");
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -783,7 +783,7 @@ string CartDebug::loadConfigFile(string file)
     }
     in.close();
 
-    return "loaded " + node.getRelativePath() + " OK";
+    return "loaded " + node.getPath(false) + " OK";
   }
   else
     return DebuggerParser::red("config file not found");
@@ -827,7 +827,7 @@ string CartDebug::saveConfigFile(string file)
     }
     out.close();
 
-    return "saved " + node.getRelativePath() + " OK";
+    return "saved " + node.getPath(false) + " OK";
   }
   else
     return DebuggerParser::red("config file not found");
